# otto-throttle

./: .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  README.md  otto throttle.lua  otto_throttle.cpp  otto_throttle.lua  otto_throttle.lua.old
.github/workflows/: build.yml
legacy/: otto_throttle.lua
msfs/: Cargo.toml
msfs/examples/aircraft_inputs/: main.rs
msfs/examples/otto_throttle/: main.rs  main.rs.adv  main.rs.new  main.rs.old
src/: CMakeLists.txt  main.rs  measurement.rs  otto_throttle.cpp  pid.rs  reference.txt
xplane_sdk/: CMakeLists.txt
